--- a/move_app/android/app/src/main/res/drawable/launch_background.xml
+++ b/move_app/android/app/src/main/res/drawable/launch_background.xml
@@ -4,9 +4,9 @@
     <item android:drawable="@android:color/black" />
 
     <!-- You can insert your own image assets here -->
-    <item>
+    <!-- <item>
         <bitmap
             android:gravity="center|bottom"
             android:src="@mipmap/logotype" />
-    </item>
+    </item> -->
 </layer-list>
